# zapp

./: .gitignore  CMakeLists.txt
cmake/modules/: FindLibUnrar.cmake
src/: CMakeLists.txt  main.cpp
src/analysers/: dosbox_config_analyser.cpp  dosbox_config_analyser.h  name_analyser.cpp  name_analyser.h  scummvm_config_analyser.cpp  scummvm_config_analyser.h  target_analyser.cpp  target_analyser.h  type_analyser.cpp  type_analyser.h
src/configs/: config.cpp  config.h
src/executors/: executor.h  executor_dosbox.cpp  executor_dosbox.h  executor_factory.cpp  executor_factory.h  executor_scummvm.h
src/extractors/: extractor.cpp  extractor.h  extractor_factory.cpp  extractor_factory.h  extractor_innoextract.cpp  extractor_innoextract.h  extractor_libarchive.cpp  extractor_libarchive.h  extractor_librar.cpp  extractor_librar.h  target_extractor.cpp  target_extractor.h
src/libs/: libarchive.cpp  libarchive.h  librar.cpp  librar.h
src/menus/: menu.cpp  menu.h
src/patchers/: patcher.cpp  patcher.h  patcher_copy.cpp  patcher_copy.h
src/processes/: dosbox.cpp  dosbox.h  innoextract.cpp  innoextract.h
src/sanitisers/: dosbox_sanitiser.cpp  dosbox_sanitiser.h  sanitiser.cpp  sanitiser.h
